# StAndroidsMissal

./: .gitattributes  .gitignore  .lfsconfig  BUILD_INSTRUCTIONS.md  CHECKLIST.md  CLAUDE.md  README.md  index.html  netlify.toml  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  version.json  version.txt  vite.config.ts
.tmp/: commentary-ingest-check.mjs  commentary-parse-check.mjs  commentary-parse-report.txt  gen-missing-refs.mjs  office-schema-demo.mjs  pericope-verify.txt  verify-pericopes.mjs
DOCS/: ARCHITECTURE.md  BUILD.md  CHECKLIST-RECONCILIATION.md  CORPUS-FILL-LOG.md  CORPUS-SCHEMA.md  ChatGPTs-DESIGN-14jul2026.md  DO-SPECIALS-PARITY.md  MEDIA-PLAN.md  MISSING-REFERENCES.md  Medium-Article-ProtoMoloch-Nursery-14jul2026.md  PEER-SIDECAR-SYNC.md  Sanctissimissa-Template.html  ScripturalReferences-PublicDomain.md  StAndroidsMissal-Additional-PRD-pieces_copilot_message_export_july_14_2026_1_50am.md  TEST_RUBRIC.md  gpt56-overnight-forensics-15jul2026.md  standroids-journal-sidecar-standalone.html
LOGS/: 2026-07-12-215019-StAndroids-always-on-subway-map-restoredbelow.txt  2026-07-13-020653-StAndroid-bible-added-claude-code-transcript-to-postgres.txt  2026-07-13-132539-StAndroids-restore-always-on-subway-map.txt  2026-07-14-044443-StAndroid-alternate-theming-and-journal-homily-mgmt-system-fable-implementation-part-1.txt  2026-07-14-191636-1812x1812x-icon-uniformly-implemented-fix.txt  (+5 more)
src-tauri/: Cargo.toml  tauri  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+124 files in other folders)
